--- a/views/blogview.hbs
+++ b/views/blogview.hbs
@@ -16,12 +16,41 @@
                 </div>
             </header>
             <div class="post-content">
-                
+                  <p style="text-align: center;">Advertisement</p>
+
+                <div id="lazy-script2" style="display: flex; justify-content: center">
+                    <script type="text/javascript">
+                        atOptions = {
+                            'key': 'bd32f3227cd0a420e51115c9c3f3f12a',
+                            'format': 'iframe',
+                            'height': 250,
+                            'width': 300,
+                            'params': {}
+                        };
+                    </script>
+                    <script  type="text/javascript"
+                        src="//www.topcreativeformat.com/bd32f3227cd0a420e51115c9c3f3f12a/invoke.js"></script>
+                </div>
                 <p>{{blog.shortDescription}}</p>
 
                 <img src="{{blog.image}}" alt="{{blog.title}}">
                 <p style="text-align: center; font-size: 12px; color: #666;">All images are copyright to their respective owners.</p>
                 {{#if blog.audio}}
+
+  <p style="text-align: center;">Advertisement</p>
+
+                <div id="lazy-script2" style="display: flex; justify-content: center">
+                                   <script type="text/javascript">
+	atOptions = {
+		'key' : '629a3dc1fa653095b6518987b0b3948b',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+</script>
+<script   type="text/javascript" src="//www.topcreativeformat.com/629a3dc1fa653095b6518987b0b3948b/invoke.js"></script>
+                </div>
                 <div class="audio"
                     style="display: flex; flex-direction: column; justify-content: center; align-items: center; ">
                     <p>Listen to the audio</p>
@@ -38,6 +67,9 @@
                 </blockquote>
 
                 <p>For more blog posts, please visit our page daily <a href="https://luvnet.com">luvnet.com</a>.</p>
+                <p style="text-align: center;">Advertisement</p>
+            <script  data-cfasync="false" src="//pl23027482.highcpmgate.com/4b47eb8d3af7bbcaa573bb48cd6c17f7/invoke.js"></script>
+<div id="container-4b47eb8d3af7bbcaa573bb48cd6c17f7"></div>
             </div>
         </article>
         <aside class="sidebar">
